# kataria

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
kataria/: __init__.py  common.py  iterable.py  option.py  result.py
tests/: fixtures.py  test_iterable.py  test_option.py  test_result.py  utils.py
